--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
           crossorigin=""/>
 </head>
 <body>
-<div id="map" style="height: 900px">
+<div id="map" style="height:900px">
 
 </div>
 
@@ -17,5 +17,6 @@
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
         crossorigin=""></script>
 <script src="index.js" type="module"></script>
+<script src="datas.js" type="module"></script>
 </body>
 </html>
