--- a/index.html
+++ b/index.html
@@ -12,12 +12,59 @@
 <body>
     <div class="topnav">
         <a class="active" href="#map">La map</a>
+        <a href="#formulaire">Ajouter un restaurant</a>
         <a href="#apropos">A propos de la SAE...</a>
     </div>
     <h3>La map</h3>
     <div id="map">
 
     </div>
+
+    <div id="formulaire">
+        <form action="" method="get">
+            <h3>Ajouter un restaurant</h3>
+            <div>
+                <label>
+                    Nom du restaurant :
+                    <input type="text" placeholder="Nom"/>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Téléphone du restaurant :
+                    <input type="tel" placeholder="Téléphone"/>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Adresse du restaurant :
+                    <input type="text" placeholder="Adresse"/>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Code postal de la ville du restaurant :
+                    <input type="number" placeholder="Code postal"/>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Ville du restaurant :
+                    <input type="text" placeholder="Ville"/>
+                </label>
+            </div>
+            <div>
+                <label>
+                    Pour enregistrer un restaurant, vous devez cliquer sur la map.
+                </label>
+            </div>
+            <input type="hidden" id="lat" readonly/>
+            <input type="hidden" id="lon" readonly/>
+
+            <button id="validate">Valider</button>
+        </form>
+    </div>
+
     <div id="apropos">
         <h3>A propos de la SAE...</h3>
         <h5>Ce qui a été effectué</h5>
@@ -25,7 +72,7 @@
         <h5>Le schéma du fonctionnement de notre projet</h5>
         <img src="img/schema.png"/>
         <h5>Les informations nécessaires au fonctionnement du projet</h5>
-        <p> TODO </p>
+        <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
         <h5>Autres précisions</h5>
         <p> TODO </p>
         <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
