--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>SAE Répartie</title>
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
           integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -21,40 +21,40 @@
     </div>
 
     <div id="formulaire">
-        <form action="" method="get">
+        <form action="" method="post">
             <h3>Ajouter un restaurant</h3>
             <div>
-                <label>
+                <label class="formfield">
                     Nom du restaurant :
                     <input type="text" placeholder="Nom"/>
                 </label>
             </div>
             <div>
-                <label>
+                <label class="formfield">
                     Téléphone du restaurant :
                     <input type="tel" placeholder="Téléphone"/>
                 </label>
             </div>
             <div>
-                <label>
+                <label class="formfield">
                     Adresse du restaurant :
                     <input type="text" placeholder="Adresse"/>
                 </label>
             </div>
             <div>
-                <label>
+                <label class="formfield">
                     Code postal de la ville du restaurant :
                     <input type="number" placeholder="Code postal"/>
                 </label>
             </div>
             <div>
-                <label>
+                <label class="formfield">
                     Ville du restaurant :
                     <input type="text" placeholder="Ville"/>
                 </label>
             </div>
             <div>
-                <label>
+                <label class="formfield">
                     Pour enregistrer un restaurant, vous devez cliquer sur la map.
                 </label>
             </div>
