--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="topnav">
         <a class="active" href="#map">La map</a>
         <a href="#formulaire">Ajouter un restaurant</a>
-        <a href="#apropos">A propos de la SAE...</a>
+        <a href="html/APropos.html">A propos de la SAE...</a>
     </div>
 
     <div>
@@ -69,18 +69,7 @@
         </form>
     </div>
 
-    <div id="apropos">
-        <h3>A propos de la SAE...</h3>
-        <h5>Ce qui a été effectué</h5>
-        <p> TODO </p>
-        <h5>Le schéma du fonctionnement de notre projet</h5>
-        <img src="img/schema.png"/>
-        <h5>Les informations nécessaires au fonctionnement du projet</h5>
-        <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
-        <h5>Autres précisions</h5>
-        <p> TODO </p>
-        <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
-    </div>
+
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
             integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
