--- a/html/APropos.html
+++ b/html/APropos.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="../css/global.css"/>
     <meta charset="UTF-8">
     <title>SAE Répartie</title>
-    <div id="apropos">
-        <h3>A propos de la SAE...</h3>
-        <h5>Ce qui a été effectué</h5>
-        <p> TODO </p>
-        <h5>Le schéma du fonctionnement de notre projet</h5>
-        <img src="img/schema.png"/>
-        <h5>Les informations nécessaires au fonctionnement du projet</h5>
-        <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
-        <h5>Autres précisions</h5>
-        <p> TODO </p>
-        <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
-        <a href="../index.html"><p>retour</p></a>
-    </div>
 </head>
 <body>
+<div id="apropos">
+    <h3>A propos de la SAE...</h3>
+    <h5>Ce qui a été effectué</h5>
+    <p> TODO </p>
+    <h5>Le schéma du fonctionnement de notre projet</h5>
+    <img src="img/schema.png"/>
+    <h5>Les informations nécessaires au fonctionnement du projet</h5>
+    <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
+    <h5>Autres précisions</h5>
+    <p> TODO </p>
+    <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
+    <a href="../index.html"><p>retour</p></a>
+</div>
 
 </body>
 </html>
