--- a/html/APropos.html
+++ b/html/APropos.html
@@ -6,19 +6,23 @@
     <title>SAE Répartie</title>
 </head>
 <body>
-<div id="apropos">
-    <h3>A propos de la SAE...</h3>
-    <h5>Ce qui a été effectué</h5>
-    <p> TODO </p>
-    <h5>Le schéma du fonctionnement de notre projet</h5>
-    <img src="img/schema.png"/>
-    <h5>Les informations nécessaires au fonctionnement du projet</h5>
-    <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
-    <h5>Autres précisions</h5>
-    <p> TODO </p>
-    <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
-    <a href="../index.html"><p>retour</p></a>
-</div>
+    <div class="topnav">
+        <a href="../">La map</a>
+        <a href="../#formulaire">Ajouter un restaurant</a>
+        <a class="active">A propos de la SAE...</a>
+    </div>
 
+    <div id="apropos">
+        <h3>A propos de la SAE...</h3>
+        <h5>Ce qui a été effectué</h5>
+        <p> TODO </p>
+        <h5>Le schéma du fonctionnement de notre projet</h5>
+        <img src="img/schema.png"/>
+        <h5>Les informations nécessaires au fonctionnement du projet</h5>
+        <p> Pour faire fonctionner notre projet, nous avons utilisé : </p>
+        <h5>Autres précisions</h5>
+        <p> TODO </p>
+        <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
+    </div>
 </body>
 </html>
