Ligne horrible à lire dans le js

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     <div id="formulaire">
         <form method="post">
             <h3>Réserver un restaurant</h3>
-            <p>Restaurant sélectionné : </p>
-            <p id="nomRes"></p>
+            <div class="formfield">
+                <label id="nomRestaurant">
+                    Veuillez cliquer sur un popup de restaurant pour le réserver.
+                </label>
+            </div>
             <input type="hidden" id="idRes"/>
             <div class="formfield" id="nomCli">
                 <label>
