--- a/html/APropos.html
+++ b/html/APropos.html
@@ -23,6 +23,7 @@
         <h5>Autres précisions</h5>
         <p> TODO </p>
         <a href="https://github.com/dardenne8u/SAE_Application_Repartie">Lien vers le Github du projet</a>
+        <a href="../index.html"><p>retour</p></a>
     </div>
 </body>
 </html>
