ajout de bouton

--- a/index.html
+++ b/index.html
@@ -20,12 +20,21 @@
     <div>
         <h3>La map</h3>
     </div>
+
+    <div class="">
+        <button id="restaurant">Afficher Restaurant</button>
+        <button id="station">Afficher Station</button>
+        <button id="etablissement">Afficher Etablissement</button>
+        <button id="circulation">Afficher Circulation</button>
+        <button id="reset">Reset affichage</button>
+    </div>
+
     <div id="map">
 
     </div>
 
     <div id="formulaire">
-        <form method="post">
+        <form method="post" datatype="json" >
             <h3>Réserver un restaurant</h3>
             <div class="formfield">
                 <label id="nomRestaurant">
