Index.html modification d'une ligne

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="topnav">
         <a class="active" href="#map">La map</a>
-        <a href="#formulaire">Ajouter un restaurant</a>
+        <a href="#formulaire">Réserver un restaurant</a>
         <a href="html/APropos.html">A propos de la SAE...</a>
     </div>
 
