--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
             <div class="formfield" id="nomCli">
                 <label>
                     Nom du client :
-                    <input type="text" placeholder="Téléphone"/>
+                    <input type="text"/>
                 </label>
             </div>
             <div class="formfield" id="nbPers">
                 <label>
                     Nombre de personnes :
-                    <input type="number" placeholder="Nom"/>
+                    <input type="number"/>
                 </label>
             </div>
             <input type="hidden" id="lat" readonly/>
